--- a/.github/workflows/predict.yml
+++ b/.github/workflows/predict.yml
@@ -16,8 +16,8 @@ on:
         required: false
         default: "1R"
   schedule:
-    - cron: "*/20 13-23 * * *"  # UTC: 22:00-08:59 JST 相当
-    - cron: "*/20 0-8 * * *"    # UTC: 09:00-17:59 JST 相当（必要なら調整）
+    - cron: "*/20 13-23 * * *"  # UTC: 22:00-08:59 JST
+    - cron: "*/20 0-8 * * *"    # UTC: 09:00-17:59 JST
 
 permissions:
   contents: write
@@ -57,23 +57,16 @@ jobs:
           PID:  ${{ steps.p.outputs.pid }}
           RACE: ${{ steps.p.outputs.race }}
         run: |
-          mkdir -p out
           node scripts/predict.mjs
-          [ -f out/prediction.json ] || echo '{}' > out/prediction.json
+          # 生成確認（無ければエラー化）
+          OUT_DIR="public/predictions/${DATE}/${PID}/${RACE}"
+          test -f "${OUT_DIR}/race.json" && test -f "${OUT_DIR}/race.md"
 
-      - name: Upload artifact (prediction.json)
-        uses: actions/upload-artifact@v4
-        with:
-          name: predict-output
-          path: out/prediction.json
-          if-no-files-found: warn
-          retention-days: 7
-
-      - name: Commit & push
+      - name: Commit & push prediction files
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add -A
+          git add public/predictions
           if ! git diff --cached --quiet; then
             git commit -m "predict: ${{ steps.p.outputs.date }} ${{ steps.p.outputs.pid }} ${{ steps.p.outputs.race }} [skip ci]"
             git pull --rebase --autostash || true
@@ -82,7 +75,7 @@ jobs:
             echo "No changes."
           fi
 
-      # ---- ここから Slack 通知 ----
+      # ---- Slack 通知（任意／成功時）----
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
@@ -95,20 +88,16 @@ jobs:
           PID:  ${{ steps.p.outputs.pid }}
           RACE: ${{ steps.p.outputs.race }}
         run: |
-          # date=today を JST で解決
+          # date=today を JST で解決（表示用）
           if [ "$DATE_IN" = "today" ]; then DATE=$(TZ=Asia/Tokyo date +%Y%m%d); else DATE="$DATE_IN"; fi
-
-          FILE="public/predictions/$DATE/$PID/$RACE.md"
+          FILE="public/predictions/$DATE/$PID/$RACE/race.md"
           if [ -f "$FILE" ]; then
-            SUMMARY=$(sed -n '1,20p' "$FILE" | sed 's/"/\\"/g')
+            SUMMARY=$(sed -n '1,30p' "$FILE" | sed 's/"/\\"/g')
             URL="https://github.com/$REPO/blob/main/$FILE"
             PAYLOAD=$(jq -n --arg t "🏁 予測 $DATE pid=$PID $RACE" \
                            --arg s "$SUMMARY" --arg u "$URL" \
                            '{text: "\($t)\n\($s)\n\n<\($u)|GitHubで詳細を見る>"}')
           else
-            PAYLOAD=$(jq -n --arg t "🏁 予測完了: $DATE pid=$PID $RACE（MD未生成）" '{text:$t}')
+            PAYLOAD=$(jq -n --arg t "🏁 予測完了: $DATE pid=$PID $RACE（race.md未検出）" '{text:$t}')
           fi
-
-          curl -X POST -H 'Content-type: application/json' \
-               --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
-      # ---- Slack 通知ここまで ----
+          curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
