fetch-results-boaters.yml を更新

--- a/.github/workflows/fetch-results-boaters.yml
+++ b/.github/workflows/fetch-results-boaters.yml
@@ -23,6 +23,9 @@ on:
         default: "10"
         type: string
 
+      permissions:
+        contents: write
+
 jobs:
   fetch:
     runs-on: ubuntu-latest
