--- a/.github/workflows/fetch-results-boaters.yml
+++ b/.github/workflows/fetch-results-boaters.yml
@@ -1,5 +1,9 @@
 name: Fetch Boaters Results
 
+# ← ここが重要。bot に push 権限を与える
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:
     inputs:
@@ -23,20 +27,25 @@ on:
         default: "10"
         type: string
 
-      permissions:
-        contents: write
-
 jobs:
   fetch:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          # ← 403 回避。GITHUB_TOKEN を checkout に渡す
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+          check-latest: true
 
       - name: Install deps
-        run: npm i cheerio
+        run: npm i --no-audit --no-fund cheerio
 
       - name: Fetch results
         env:
@@ -50,14 +59,18 @@ jobs:
 
       - name: List outputs
         run: |
-          find public/results/v1/${{ inputs.DATE }} -type f -name "*.json" -printf "%P\n" 2>/dev/null || true
+          find "public/results/v1/${{ inputs.DATE }}" -type f -name "*.json" -printf "%P\n" 2>/dev/null || true
 
       - name: Commit & push (if changed)
         if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
         run: |
-          git config user.name "github-actions[bot]"
+          set -e
+          git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
-          git diff --cached --quiet && echo "no changes" || (git commit -m "results: ${{
-            inputs.DATE
-          }} pids=${{ inputs.PIDS }} races=${{ inputs.RACES }}" && git push)
+          if git diff --cached --quiet; then
+            echo "no changes"
+          else
+            git commit -m "results: ${{ inputs.DATE }} pids=${{ inputs.PIDS }} races=${{ inputs.RACES }}"
+            git push
+          fi
