--- a/.github/workflows/fetch-results-boaters.yml
+++ b/.github/workflows/fetch-results-boaters.yml
@@ -1,6 +1,5 @@
 name: Fetch Boaters Results
 
-# ← ここが重要。bot に push 権限を与える
 permissions:
   contents: write
 
@@ -26,6 +25,18 @@ on:
         required: false
         default: "10"
         type: string
+      WITH_ODDS:
+        description: "3連単オッズも保存する"
+        required: false
+        default: "true"
+        type: choice
+        options: ["true","false"]
+      SKIP_EXISTING:
+        description: "既存JSONがあれば保存スキップ（results/odds）"
+        required: false
+        default: "true"
+        type: choice
+        options: ["true","false"]
 
 jobs:
   fetch:
@@ -35,7 +46,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # ← 403 回避。GITHUB_TOKEN を checkout に渡す
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node
@@ -47,19 +57,25 @@ jobs:
       - name: Install deps
         run: npm i --no-audit --no-fund cheerio
 
-      - name: Fetch results
+      - name: Fetch results (+ optional odds)
         env:
           TARGET_DATE: ${{ inputs.DATE }}
           TARGET_PIDS: ${{ inputs.PIDS }}
           TARGET_RACES: ${{ inputs.RACES }}
           RESULT_AUTO_AFTER_MIN: ${{ inputs.AFTER_MIN }}
+          WITH_ODDS: ${{ inputs.WITH_ODDS }}
+          SKIP_EXISTING: ${{ inputs.SKIP_EXISTING }}
         run: |
-          echo "[info] DATE=$TARGET_DATE PIDS=$TARGET_PIDS RACES=$TARGET_RACES AFTER_MIN=$RESULT_AUTO_AFTER_MIN"
+          echo "[info] DATE=$TARGET_DATE PIDS=$TARGET_PIDS RACES=$TARGET_RACES AFTER_MIN=$RESULT_AUTO_AFTER_MIN WITH_ODDS=$WITH_ODDS SKIP_EXISTING=$SKIP_EXISTING"
           node scripts/fetch-results-boaters.js "$TARGET_DATE" "$TARGET_PIDS" "$TARGET_RACES"
 
-      - name: List outputs
+      - name: List outputs (results)
         run: |
           find "public/results/v1/${{ inputs.DATE }}" -type f -name "*.json" -printf "%P\n" 2>/dev/null || true
+
+      - name: List outputs (odds)
+        run: |
+          find "public/odds/v1/${{ inputs.DATE }}" -type f -name "*.json" -printf "%P\n" 2>/dev/null || true
 
       - name: Commit & push (if changed)
         if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
@@ -71,6 +87,6 @@ jobs:
           if git diff --cached --quiet; then
             echo "no changes"
           else
-            git commit -m "results: ${{ inputs.DATE }} pids=${{ inputs.PIDS }} races=${{ inputs.RACES }}"
+            git commit -m "results/odds: ${{ inputs.DATE }} pids=${{ inputs.PIDS }} races=${{ inputs.RACES }} with_odds=${{ inputs.WITH_ODDS }} skip_existing=${{ inputs.SKIP_EXISTING }}"
             git push
           fi
