--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       mode:
-        description: predict or eval
+        description: "predict or eval"
         required: true
         default: predict
       dates:
@@ -32,6 +32,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -42,7 +43,12 @@ jobs:
       - name: Install deps
         run: pip install numpy pandas
 
-      # ---- predict: 同一エンジンでTOPNだけを出力（出目まで完全一致） ----
+      - name: Clean output dirs
+        run: |
+          rm -rf ./predict ./out
+          mkdir -p ./predict ./out
+
+      # ---- predict: TOPNのみを ./predict に出力（毎回上書き） ----
       - name: Predict (TOPN, same engine as eval)
         if: ${{ github.event.inputs.mode == 'predict' }}
         run: |
@@ -54,10 +60,17 @@ jobs:
             --pids  "${{ github.event.inputs.pids }}" \
             --races "${{ github.event.inputs.races }}" \
             --limit "${{ github.event.inputs.limit }}" \
-            --predict-only \
-            --predout ./out
+            --predict-only
 
-      # ---- eval: ROI集計（Artifacts収集のため out/ に出力） ----
+      - name: Upload predict artifact
+        if: ${{ github.event.inputs.mode == 'predict' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: sims_outputs
+          path: ./predict
+          if-no-files-found: error
+
+      # ---- eval: ROI集計を ./out に出力 ----
       - name: Eval (ROI)
         if: ${{ github.event.inputs.mode == 'eval' }}
         run: |
@@ -70,10 +83,10 @@ jobs:
             --limit "${{ github.event.inputs.limit }}" \
             --outdir ./out
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload eval artifact
+        if: ${{ github.event.inputs.mode == 'eval' }}
+        uses: actions/upload-artifact@v4
         with:
-            name: sims_outputs
-            path: |
-              out/**
-              *.csv
-              *.json
+          name: sims_outputs
+          path: ./out
+          if-no-files-found: error
