--- a/.github/workflows/sims.yml
+++ b/.github/workflows/sims.yml
@@ -41,7 +41,9 @@ jobs:
           python-version: "3.11"
 
       - name: Install deps
-        run: pip install numpy pandas
+        run: |
+          python -m pip install --upgrade pip
+          pip install numpy pandas
 
       - name: Clean output dirs
         run: |
@@ -62,11 +64,21 @@ jobs:
             --limit "${{ github.event.inputs.limit }}" \
             --predict-only
 
+      - name: Show predict outputs
+        if: ${{ github.event.inputs.mode == 'predict' }}
+        run: |
+          echo "=== tree ./predict ==="
+          ls -lahR ./predict || true
+          echo "=== head predictions_summary.csv (if exists) ==="
+          [ -f ./predict/predictions_summary.csv ] && head -n 20 ./predict/predictions_summary.csv || echo "no predictions_summary.csv"
+          echo "=== _EMPTY.txt (if exists) ==="
+          [ -f ./predict/_EMPTY.txt ] && cat ./predict/_EMPTY.txt || echo "no _EMPTY.txt"
+
       - name: Upload predict artifact
         if: ${{ github.event.inputs.mode == 'predict' }}
         uses: actions/upload-artifact@v4
         with:
-          name: sims_outputs
+          name: sims_outputs_predict_${{ github.event.inputs.dates }}
           path: ./predict
           if-no-files-found: error
 
@@ -83,10 +95,20 @@ jobs:
             --limit "${{ github.event.inputs.limit }}" \
             --outdir ./out
 
+      - name: Show eval outputs
+        if: ${{ github.event.inputs.mode == 'eval' }}
+        run: |
+          echo "=== tree ./out ==="
+          ls -lahR ./out || true
+          echo "=== overall.json (if exists) ==="
+          [ -f ./out/overall.json ] && cat ./out/overall.json || echo "no overall.json"
+          echo "=== head per_race_results.csv (if exists) ==="
+          [ -f ./out/per_race_results.csv ] && head -n 20 ./out/per_race_results.csv || echo "no per_race_results.csv"
+
       - name: Upload eval artifact
         if: ${{ github.event.inputs.mode == 'eval' }}
         uses: actions/upload-artifact@v4
         with:
-          name: sims_outputs
+          name: sims_outputs_eval_${{ github.event.inputs.dates }}
           path: ./out
           if-no-files-found: error
